--- a/picture/readFrontend/templates/pc/common/footer.ejs
+++ b/picture/readFrontend/templates/pc/common/footer.ejs
@@ -1,27 +1,25 @@
 <div class="clearfix"></div>
-<!-- <div class="container" id="firendlink">
-    友情连接：
-    <a target="_blank" href="https://www.biquwx.la/">笔趣阁</a>
-    <a target="_blank" href="https://www.biquwx.la/0_383/">元尊</a>
-    <a target="_blank" href="https://www.biquwx.la/3_3918/">沧元图</a>
-    <a target="_blank" href="https://www.biquwx.la/0_921/">大主宰最新章节</a>
-    <a target="_blank" href="https://www.biquwx.la/0_925/">完美世界最新章节</a>
-    <a target="_blank" href="https://www.biquwx.la/0_383/">元尊最新章节</a>
-    <a target="_blank" href="https://www.biquwx.la/3_3918/">沧元图最新章节</a>
-    <a target="_blank" href="http://www.35zww.com/">三五中文网</a>
-    <a target="_blank" href="http://www.tudoutxt.com/">土豆小说网</a>
-    <a target="_blank" href="http://www.ting456.com/">听中国</a>
-    <a target="_blank" href="http://book.guidaye.com/">鬼小说</a>
-    <a target="_blank" href="http://www.telnote.cn/">伤感日志</a>
-    <a href="http://www.jianliw.com/" target="_blank">简历模板下载</a>
-    <a target="_blank" href="http://www.shubao520.com/">书包网 </a>
-    <a target="_blank" href="http://www.justsou.com/">展搜中文网</a>
-    <a target="_blank" href="http://www.yawen8.la/">雅文言情小说</a>
-    <a target="_blank" href="http://www.biquku.la/">笔趣库备用站</a>
-</div> -->
+<div class="container">
+    <div id="firendlink">
+        <h5>友情连接：</h5>
+        <a target="_blank" href="https://www.biquwx.la/"> 宅男女神</a>
+        <a target="_blank" href="https://www.biquwx.la/0_383/">内地宅男女神</a>
+        <a target="_blank" href="https://www.biquwx.la/3_3918/">日本宅男女神</a>
+        <a target="_blank" href="https://www.biquwx.la/0_921/">韩国宅男女神</a>
+        <a target="_blank" href="https://www.biquwx.la/0_925/">美媛馆</a>
+        <a target="_blank" href="https://www.biquwx.la/0_383/">秀人网</a>
+        <a target="_blank" href="https://www.biquwx.la/3_3918/">尤果网</a>
+        <a target="_blank" href="http://www.35zww.com/">模范学院</a>
+        <a target="_blank" href="http://www.tudoutxt.com/">尤蜜荟</a>
+        <a target="_blank" href="http://www.ting456.com/">推女郎</a>
+        <a target="_blank" href="http://book.guidaye.com/">瑞丝馆</a>
+        <a target="_blank" href="http://book.guidaye.com/">克拉女神</a>
+        <a target="_blank" href="http://book.guidaye.com/">体育画报</a>
+    </div>
+</div>
 <footer>
     <div class="container">
-        <p>本站所收录作品均是来源于网友上传,与本站立场无关,如有侵犯版权或涉黄问题,请来信告知,本站立即予以删除。 <br />邮箱:99amn.com@gmail.com</p>
+        <p>本站所收录作品均是来源于网友上传,与本站立场无关,如有侵犯版权或涉黄问题,请来信告知,本站立即予以删除。 <br />邮箱:9invshen.com@gmail.com</p>
     </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
