--- a/picture/readFrontend/templates/pc/common/mainHeader.ejs
+++ b/picture/readFrontend/templates/pc/common/mainHeader.ejs
@@ -1,34 +1,38 @@
 <div class="container-fluid hidden-xs topbar">
     <div class="container topbar-con">
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-12">
                 <div class="topbar-sethome">
-                    <a href="javascript:void(0);">将本站设为首页</a>
-                </div>
-                <div class="topbar-addfavorite">
-                    <a href="javascript:void(0)">收藏
-                        <%= branchInfo.shorttitle || "笔趣阁"%></a>
+                    欢迎访问<a href="/"> 爱女神</a> ｜ <a href="/">宅男女神</a> ｜ <a href="/articles">最新美女情报</a> ｜ <a href="/modelList">最全美女资料</a> ｜ <a href="/galleryList">高清美女图片</a>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div class="container header hidden-xs">
+<!-- <div class="container header hidden-xs">
     <div class="row">
         <div class="col-sm-4 logo">
             <a href="/">
                 <%= branchInfo.shorttitle || "宅男女神"%></a>
         </div>
-        <div class="col-sm-8 text-right hidden-xs">
+        <div class="col-sm-8 text-right">
             <form method="get" action="/search" class="search-form" id="form">
                 <input class="input-text input-key" name="keyword" placeholder="输入名称关键字">
                 <input type="submit" class="btn-tosearch" value="搜索" title="搜索">
             </form>
+            <div>
+                <a href="/galleryList">克拉女神</a>
+                <a href="/galleryList">语画界</a>
+                <a href="/galleryList">美媛馆</a>
+                <a href="/galleryList">波萝社</a>
+                <a href="/galleryList">魅妍社</a>
+                <a href="/galleryList">模范学院</a>
+            </div>
         </div>
     </div>
-</div>
+</div> -->
 <div class="container">
-    <nav class="navbar navbar-default" style="margin-bottom: 0;">
+    <nav class="navbar navbar-default main-nav" style="margin-bottom: 0;">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
@@ -36,24 +40,45 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand hidden-sm hidden-md hidden-lg" href="/">
+            <a class="navbar-brand hidden-sm hidden-md hidden-lg" href="/" style="color:#fff">
                 <%= branchInfo.shorttitle || "宅男女神"%></a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li class="<%= currentRender=='home'?'active':'' %>"><a href="/">首页</a></li>
-                <li class="<%= currentRender=='article'?'active':'' %>"><a href="/article/">女神情报</a></li>
-                <li class="<%= currentRender=='pictureTag'?'active':'' %>"><a href="/pictureTag/">美女图片</a></li>
-                <li class="<%= currentRender=='modelTag'?'active':'' %>"><a href="/modelTag/">倾城·美人榜</a></li>
-                <li class="<%= currentRender=='modelRank'?'active':'' %>"><a href="/modelRank/">女神排行榜</a></li>
+                <li class="<%= currentRender=='articles'?'active':'' %>"><a href="/articles/">女神情报</a></li>
+                <li class="<%= currentRender=='galleryList'?'active':'' %>"><a href="/galleryList/">美女图片</a></li>
+                <li class="<%= currentRender=='modelList'?'active':'' %>"><a href="/modelList/">倾城·美人榜</a></li>
+                <li class="<%= currentRender=='paihang'?'active':'' %>"><a href="/paihang/">女神排行榜</a></li>
+                <li class="<%= currentRender=='findModel'?'active':'' %>"><a href="/findModel/">女神专区</a></li>
             </ul>
             <form class="navbar-form navbar-left hidden-sm hidden-md hidden-lg" method="get" action="/search">
                 <div class="form-group">
-                    <input type="text" class="form-control" name="keyword" placeholder="输入名称关键字">
+                    <input type="text" class="form-control" name="keyword" required placeholder="输入名称关键字">
                 </div>
                 <button type="submit" class="btn btn-default">搜索</button>
             </form>
         </div>
     </nav>
+</div>
+<div class="container header-search hidden-xs">
+    <div class="search-box">
+        <div class="search-box-form">
+            <form method="get" action="/search" class="search-form" id="form">
+                <input class="input-text input-key" name="keyword" required placeholder="输入名称关键字">
+                <input type="submit" class="btn-tosearch" value="搜索" title="搜索">
+            </form>
+        </div>
+        <div class="search-box-right">
+            <a class="to-find-model" href="/findModel">找美女</a>
+            <span style="color:#dd4b39;font-weight: bold;margin-left: 20px;">热门搜索：</span>
+            <a href="/galleryList">克拉女神</a>
+            <a href="/galleryList">语画界</a>
+            <a href="/galleryList">美媛馆</a>
+            <a href="/galleryList">波萝社</a>
+            <a href="/galleryList">魅妍社</a>
+            <a href="/galleryList">模范学院</a>
+        </div>
+    </div>
 </div>
